netq-log-platform/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netq-log-platform
spec:
  selector:
    app: netq-log-platform
  ports:
    - name: http
      port: 80
      targetPort: http-frontend
