netq-log-platform/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netq-log-platform
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: netq-log-platform.telecom.pt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netq-log-platform
                port:
                  number: 80
